--- a/kubernetes/app-deployment.yaml
+++ b/kubernetes/app-deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
+  name: myapp
 spec:
   selector:
     matchLabels:
-      app: nginx
-  replicas: 1
+      app: myapp
+  replicas: 2
   template:
     metadata:
       labels:
-        app: nginx
+        app: myapp
     spec:
       containers:
-      - name: nginx
-        image: nginx
+      - name: myapp
+        image: sanjilpradhan/devops-flask-app
         ports:
-        - containerPort: 80
+        - containerPort: 5000
