--- a/kubernetes/app-service.yaml
+++ b/kubernetes/app-service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: myapp-svc
   labels:
-    app: nginx
+    app: myapp
 spec:
   ports:
   - name: http
     port: 80
     protocol: TCP
-    targetPort: 80
+    targetPort: 5000
   selector:
-    app: nginx
+    app: myapp
   type: LoadBalancer
