Add additional config files

--- a/kubernetes/app-deployment.yaml
+++ b/kubernetes/app-deployment.yaml
@@ -2,11 +2,12 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: myapp
+  namespace: app-deploy
 spec:
   selector:
     matchLabels:
       app: myapp
-  replicas: 2
+  replicas: 1
   template:
     metadata:
       labels:
@@ -14,6 +15,6 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: sanjilpradhan/devops-flask-app
+        image: 746252170072.dkr.ecr.us-east-1.amazonaws.com/flask-app:platform-based
         ports:
         - containerPort: 5000
